--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,8 @@
     "sstream": "cpp",
     "stdexcept": "cpp",
     "streambuf": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "cstring": "cpp",
+    "list": "cpp"
   }
 }
